--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,11 @@
       <button class = "btn btn-danger"  id = "stopButton">Stop and Send</button>
     </div>
     <div class = "imageContainer">
-      <ol id="recordingsList"></ol>
+      <ol id="speechTranscription"></ol>
 
     </div>
 
+    <script src="/socket.io/socket.io.js"></script>
     <script src="https://cdn.rawgit.com/mattdiamond/Recorderjs/08e7abd9/dist/recorder.js"></script>
     <script src="main.js"></script>
   </body>
