--- a/public/index.html
+++ b/public/index.html
@@ -15,13 +15,13 @@
       <button class = "btn btn-primary"  id = "pauseButton">Pause</button>
       <button class = "btn btn-danger"  id = "stopButton">Stop and Send</button>
     </div>
-    <div class = "imageContainer">
-      <ol id="speechTranscription"></ol>
+      <h2 id="speechTranscription"></h2>
 
-    </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://cdn.rawgit.com/mattdiamond/Recorderjs/08e7abd9/dist/recorder.js"></script>
     <script src="main.js"></script>
+    <script src="sketch.js"></script>
   </body>
 </html>
