--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
   <div id="mic-ready" class="medium-title"> <img src="img/Ready.png" class = "animated pulse infinite slow"> Tap To Start
   </div>
   <!--Mic has been pressed and is listening - WIREFRAME SCREEN 2-->
-  <div id="mic-on" class="medium-title "><img src="img/listening.png" class = "animated infinite flash slower"> Listening...<br><p style="font-size: 40px;">Press again when done</p>
+  <div id="mic-on" class="medium-title "><img src="img/Listening.png" class = "animated infinite flash slower"> Listening...<br><p style="font-size: 40px;">Press again when done</p>
   </div>
   <!--Mic has heard a prompt and asks user to pick an image - WIREFRAME SCREEN 3-->
   <div id="drawing-pick">
